# internal/controller/course.go
@@ -15,6 +15,7 @@ type Course struct {
 	courseService service.Course
 	planService   service.Plan
 	actionService service.Action
+	reviewService service.Review
 	userMidd midd.User
 	courseMidd midd.Course
 }
@@ -23,12 +24,14 @@ func NewCourse(baseGroup *gin.RouterGroup,
 	courseService service.Course,
 	planService service.Plan,
 	actionService service.Action,
+	reviewService service.Review,
 	userMidd midd.User,
 	courseMidd midd.Course) {
 
 	course := &Course{courseService: courseService,
 		planService: planService,
 		actionService: actionService,
+		reviewService: reviewService,
 		userMidd: userMidd,
 		courseMidd: courseMidd}
 
@@ -106,6 +109,12 @@ func NewCourse(baseGroup *gin.RouterGroup,
 		courseMidd.CourseCreatorVerify(),
 		courseMidd.UserRoleAccessCourseByStatusRange([]global.CourseStatus{global.Preparing, global.Reject}),
 		course.SubmitForReview)
+
+	baseGroup.POST("/course/:course_id/review",
+		userMidd.TokenPermission([]global.Role{global.UserRole}),
+		userMidd.UserStatusPermission([]global.UserStatus{global.UserActivity}),
+		courseMidd.UserRoleAccessCourseByStatusRange([]global.CourseStatus{global.Sale}),
+		course.CreateCourseReview)
 }
 
 // CreateCourse 創建課表
@@ -458,4 +467,59 @@ func (cc *Course) SubmitForReview(c *gin.Context)  {
 		return
 	}
 	cc.JSONSuccessResponse(c, nil, "success!")
+}
+
+// CreateCourseReview 創建課表評論
+// @Summary 創建課表評論
+// @Description 創建課表評論
+// @Tags Course
+// @Accept json
+// @Produce json
+// @Security fitness_token
+// @Param course_id path int64 true "課表id"
+// @Param score formData int true "評分"
+// @Param body formData string true "評論內文"
+// @Param review_images formData file false "評論照片(多張)"
+// @Success 200 {object} model.SuccessResult "成功!"
+// @Failure 400 {object} model.ErrorResult "失敗"
+// @Router /course/{course_id}/review [POST]
+func (cc *Course) CreateCourseReview(c *gin.Context) {
+	var uri validator.CourseIDUri
+	var form validator.CreateReviewForm
+	uid, e := cc.GetUID(c)
+	if e != nil {
+		cc.JSONValidatorErrorResponse(c, e.Error())
+		return
+	}
+	if err := c.ShouldBindUri(&uri); err != nil {
+		cc.JSONValidatorErrorResponse(c, err.Error())
+		return
+	}
+	if err := c.ShouldBind(&form); err != nil {
+		cc.JSONValidatorErrorResponse(c, err.Error())
+		return
+	}
+	//獲取評論照片
+	files := c.Request.MultipartForm.File["review_images"]
+	var reviewImages []*dto.File
+	for _, f := range files {
+		data, _ := f.Open()
+		file := &dto.File{
+			FileNamed: f.Filename,
+			Data: data,
+		}
+		reviewImages = append(reviewImages, file)
+	}
+	review, err := cc.reviewService.CreateReview(c, &dto.CreateReviewParam{
+		CourseID: uri.CourseID,
+		UserID: uid,
+		Score: form.Score,
+		Body: form.Body,
+		Images: reviewImages,
+	})
+	if err != nil {
+		cc.JSONErrorResponse(c, err)
+		return
+	}
+	cc.JSONSuccessResponse(c, review, "success!")
 }
